# asm_embed

./: CMakeLists.txt  CMakeSettings.json  README.md  embed.asm  embed.h  embed.s  test.c  test.cpp
cmake/: asm_embed.cmake  asm_embed.h
